--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>hello world</title>
 </head>
 <body>
-<h1>hello coursera</h1>
+<h1>hello coursera, Its a great course.</h1>
 </body>
 </html>
